# mode-kissing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/: config.toml
demo/model1/: config.toml  model.txt
demo/model2/: config.toml  model.txt
demo/model3/: config.toml  model.txt
demo/model4/: .gitignore  config.toml  model.txt
include/: areclose.hpp  disp.hpp  secfunc.hpp  timer.hpp  toms748.h  utils.hpp
python/: compare_disp_model.py  compute_N.py  plot_disp.py  plot_secfunc.py
src/: CMakeLists.txt  disp.cc  main_forward.cc  main_secfunc.cc  secfunc.cc  timer.cc  toms748.cc  utils.cc
